--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,8 +1,8 @@
 <%- include('header') %>
 <div class="container">
     <h1><%= title %></h1>
-    <a href="/Profile">Profile</a>
+    <a href="/profile">Profile</a>
 </div>
-<br><a href="/Transfer">Transfer</a>
+<br><a href="/transfer">Transfer</a>
 
 <%- include('footer') %>
