--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -1,11 +1,11 @@
 <%- include('header') %>
 <h1>Profile</h1>
 <div>
-    <p><%- user.name %></p>
-    <p><%- user.username %></p>
-    <p><%- user.phone %></p>
-    <p><%- user.email %></p>
-    <p><%- user.address %></p>
+    <p><%= user.name %></p>
+    <p><%= user.username %></p>
+    <p><%= user.phone %></p>
+    <p><%= user.email %></p>
+    <p><%= user.address %></p>
 </div>
 <br><a href="/">Back to summary</a>
 <%- include('footer.ejs') %>
